Adiciona um quadro de pixels com 5x5 blocos
Signed-off-by: Marlon Couto <marloncouto199@gmail.com>

--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@
 #button-random-color {
   margin: 5px auto;
 }
+.pixel {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  display: inline-block;
+}
